--- a/public/index.html
+++ b/public/index.html
@@ -2,30 +2,28 @@
 <html lang="en" data-ng-app="dayBreak">
 <head>
 	<meta charset="utf-8" />
-    <meta property="og:type" content="website">
+	<meta property="og:type" content="website">
 	<meta property="og:title" content="Daybreak is the pefect way to share your Perfect Day.">
-    <meta property="og:description" content="Use Daybreak to discover other people's favorite days and favorite places, and to share your perfect day.">
+	<meta property="og:description" content="Use Daybreak to discover other people's favorite days and favorite places, and to share your perfect day.">
 	<script src="js/modernizr.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Fira+Sans:400,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
-  	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<link rel="stylesheet" href="css/jquery-ui.min.css" />
-
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="css/jquery-ui.min.css" />
 	<link rel="stylesheet" href="css/styles.css" />
-
 <title>Share and Find the Perfect Day</title>
 </head>
+
 <body>
 
 <div id="modal"><modalContent></modalContent></div>
-    <div ng-controller="userController as User">
+    <div data-ng-controller="userController as User">
 		<div data-ng-controller="dayController as Day">
-			<div my-user-functions></div> <!--  Nav Bar and User Register/Login/Account Controls-->
- 			<div class="userInfoMessage">{{User.userMessage}}</div>
-
+			<my-user-functions></my-user-functions> <!--  Nav Bar and User Register/Login/Account Controls-->
+			<tag-search></tag-search>
+			<!-- <div class="userInfoMessage">{{User.userMessage}}</div> -->
 			 <!-- User.profileMode is {{User.profileMode}}<br>
 			 User.userViewSwitch is {{User.userViewSwitch}} -->
-
 	 		<div data-ng-switch on='User.userViewSwitch'>
 	 			<div data-ng-switch-when="profile">
 					<user-profile-page></user-profile-page>
@@ -34,7 +32,6 @@
 
 			<div data-ng-switch on='User.userViewSwitch'>
 				<div data-ng-switch-when="grid">
-   					<tag-search></tag-search>
     				<grid-day-view></grid-day-view>
 				</div>
 			</div>
